<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="propulsar.sinnix.presentationlayer.fragments.RegisterFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/fragmentregister_button_registrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimaryDark"
            android:padding="10dp"
            android:text="@string/register_button_register"
            android:textColor="@color/textColorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/fragmentregister_button_linkedin"
            app:layout_constraintTop_toBottomOf="@+id/fragmentregister_textInputLayout_contra" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragmentregister_textInputLayout_usuario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/fragmentregister_editText_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/register_field_email_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragmentregister_textInputLayout_contra"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentregister_textInputLayout_usuario">

            <EditText
                android:id="@+id/fragmentregister_editText_contra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/register_field_contra_hint" />
        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/fragmentregister_button_linkedin"
            android:layout_width="55dp"
            android:layout_height="57dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:src="@mipmap/ic_launcher_linkedin"
            app:layout_constraintEnd_toStartOf="@+id/fragmentregister_button_registrarse"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentregister_textInputLayout_contra" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>
